# ImagineAI

./: .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_multi_tenancy_and_features.py
backend/django_app/: Dockerfile
backend/django_app/config/: urls.py
backend/fastapi_app/: Dockerfile  main.py
backend/fastapi_app/api/: deps.py  websocket.py
backend/fastapi_app/middleware/: rate_limiter.py  request_id.py
backend/fastapi_app/services/: auth_service.py  organization_service.py  product_service.py  upload_service.py  webhook_service.py
backend/ml/: config.py
backend/ml/models/: classifier.py  defect_detector.py  feature_extractor.py  model_registry.py
backend/ml/services/: bedrock_client.py  description_generator.py  inference.py  preprocessing.py
backend/requirements/: base.txt  dev.txt  django.txt  fastapi.txt  ml.txt
backend/shared/: config.py  constants.py  database.py  exceptions.py
backend/shared/models/: __init__.py  ab_testing.py  analysis.py  export.py  pipeline.py  (+5 more)
backend/tests/: conftest.py  factories.py
backend/workers/: Dockerfile  celery_app.py
docs/: api.md  architecture.md  deployment.md
frontend/: Dockerfile  angular.json  nginx.conf  package.json
frontend/src/: index.html  styles.scss
infrastructure/argocd/: application.yaml  applicationset.yaml  project.yaml
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
scripts/: localstack-init.sh  seed_data.py
(+166 files in other folders)
