[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "imagineai"
version = "1.0.0"
description = "AI-Powered E-Commerce Image Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["shared", "fastapi_app", "workers", "ml"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
